@@ -14,25 +14,34 @@
 package org.bonitasoft.engine.bpm.process;
 
 import static java.util.Arrays.asList;
+import static java.util.Map.entry;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.SoftAssertions.assertSoftly;
+import static org.awaitility.Awaitility.await;
 import static org.bonitasoft.engine.data.instance.api.DataInstanceContainer.ACTIVITY_INSTANCE;
 import static org.bonitasoft.engine.data.instance.api.DataInstanceContainer.PROCESS_INSTANCE;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.fail;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.Callable;
+import java.util.Map;
+import java.util.Objects;
 
 import org.bonitasoft.engine.bpm.bar.BarResource;
 import org.bonitasoft.engine.bpm.bar.BusinessArchiveBuilder;
 import org.bonitasoft.engine.bpm.bar.actorMapping.Actor;
 import org.bonitasoft.engine.bpm.bar.actorMapping.ActorMapping;
 import org.bonitasoft.engine.bpm.connector.ConnectorEvent;
+import org.bonitasoft.engine.bpm.contract.FileInputValue;
 import org.bonitasoft.engine.bpm.contract.Type;
 import org.bonitasoft.engine.bpm.document.DocumentValue;
 import org.bonitasoft.engine.bpm.process.impl.ProcessDefinitionBuilder;
+import org.bonitasoft.engine.commons.exceptions.SObjectNotFoundException;
 import org.bonitasoft.engine.core.contract.data.SContractDataNotFoundException;
+import org.bonitasoft.engine.core.document.api.DocumentService;
+import org.bonitasoft.engine.core.document.model.SLightDocument;
 import org.bonitasoft.engine.core.process.instance.model.SFlowNodeInstance;
 import org.bonitasoft.engine.core.process.instance.model.archive.SAConnectorInstance;
 import org.bonitasoft.engine.core.process.instance.model.archive.SAFlowNodeInstance;
@@ -43,8 +52,10 @@ import org.bonitasoft.engine.expression.InvalidExpressionException;
 import org.bonitasoft.engine.identity.User;
 import org.bonitasoft.engine.persistence.QueryOptions;
 import org.bonitasoft.engine.persistence.SBonitaReadException;
+import org.bonitasoft.engine.service.ServiceAccessor;
 import org.bonitasoft.engine.test.BuildTestUtil;
 import org.bonitasoft.engine.test.CommonAPILocalIT;
+import org.bonitasoft.engine.transaction.UserTransactionService;
 import org.junit.Test;
 
 /**
@@ -54,7 +65,7 @@ public class DeleteProcessInstancesIT extends CommonAPILocalIT {
 
     @Test
     public void should_delete_complete_archived_process_instances() throws Exception {
-        loginOnDefaultTenantWithDefaultTechnicalUser();
+        loginWithTechnicalUser();
         User user = createUser("deleteProcessInstanceIT", "bpm");
         ProcessDefinition mainProcess = createMainProcessDefinition();
         ProcessDefinition sub1 = createSubProcessDefinition1();
@@ -64,7 +75,17 @@ public class DeleteProcessInstancesIT extends CommonAPILocalIT {
         List<Long> userTaskInstances = new ArrayList<>();
         for (int i = 0; i < 2; i++) {
             long id = getProcessAPI().startProcessWithInputs(mainProcess.getId(),
-                    Collections.singletonMap("simpleInput1", "singleInputValue")).getId();
+                    Map.ofEntries(entry("simpleInput1", "singleInputValue"),
+                            entry("myFile", new FileInputValue("testFile", "testFile".getBytes()))))
+                    .getId();
+            var archivedFileInput = await().until(() -> inTx(
+                    () -> getServiceAccessor().getContractDataService().getArchivedProcessDataValue(id, "myFile")),
+                    Objects::nonNull);
+            assertThat(archivedFileInput)
+                    .as("File input content of archived contract data should be null")
+                    .isInstanceOf(FileInputValue.class)
+                    .extracting("content")
+                    .isNull();
             long userTask1 = waitForUserTask(id, "userTask1");
             userTaskInstances.add(userTask1);
             getProcessAPI().assignUserTask(userTask1, user.getId());
@@ -80,11 +101,11 @@ public class DeleteProcessInstancesIT extends CommonAPILocalIT {
 
         getProcessAPI().deleteArchivedProcessInstancesInAllStates(processInstances);
 
-        getServiceAccessor().getUserTransactionService().executeInTransaction((Callable<Void>) () -> {
+        inTx(() -> {
             for (Long userTaskInstance : userTaskInstances) {
                 try {
                     getServiceAccessor().getContractDataService().getArchivedUserTaskDataValue(userTaskInstance,
-                            inputName());
+                            "simpleInputTask");
                     fail("should have deleted archived contract data on activity instance");
                 } catch (SContractDataNotFoundException e) {
                     //ok
@@ -132,37 +153,54 @@ public class DeleteProcessInstancesIT extends CommonAPILocalIT {
 
     @Test
     public void should_delete_process_instance_currently_executing() throws Exception {
-        loginOnDefaultTenantWithDefaultTechnicalUser();
+        loginWithTechnicalUser();
         User user = createUser("deleteProcessInstanceIT", "bpm");
         ProcessDefinition mainProcess = createMainProcessDefinition();
         ProcessDefinition sub1 = createSubProcessDefinition1();
         ProcessDefinition sub2 = createSubProcessDefinitionWithUserTask(user);
 
-        long id = getProcessAPI().startProcessWithInputs(mainProcess.getId(),
-                Collections.singletonMap("simpleInput1", "singleInputValue")).getId();
-        waitForUserTask(id, "userTask1");
+        long processInstanceId = getProcessAPI().startProcessWithInputs(mainProcess.getId(),
+                Map.ofEntries(entry("simpleInput1", "singleInputValue"),
+                        entry("myFile", new FileInputValue("testFile", "testFile".getBytes()))))
+                .getId();
+        waitForUserTask(processInstanceId, "userTask1");
         waitForUserTask("taskOfSubProcess");
         waitForUserTask("taskOfSubProcess");
+
+        final SLightDocument document = getDocument(processInstanceId);
+        assertThat(document).isNotNull();
+
         Thread.sleep(200);
 
-        getProcessAPI().deleteProcessInstance(id);
+        getProcessAPI().deleteProcessInstance(processInstanceId);
 
         assertSoftly((soft) -> {
             try {
                 soft.assertThat(getAllFlowNodes()).isEmpty();
                 soft.assertThat(getAllArchFlowNodes()).isEmpty();
                 soft.assertThat(getAllProcessInstances()).isEmpty();
-
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
         });
+        assertThrows(SObjectNotFoundException.class, () -> getDocumentContent(document.getId()));
 
         disableAndDeleteProcess(asList(mainProcess, sub1, sub2));
     }
 
-    protected String inputName() {
-        return "simpleInputTask";
+    private SLightDocument getDocument(long processInstanceId) throws Exception {
+        final ServiceAccessor serviceAccessor = getServiceAccessor();
+        final DocumentService documentService = serviceAccessor.getDocumentService();
+        final UserTransactionService userTransactionService = serviceAccessor.getUserTransactionService();
+        final Long documentId = userTransactionService.executeInTransaction(
+                () -> documentService.getMappedDocument(processInstanceId, "myDoc").getDocumentId());
+        return getDocumentContent(documentId);
+    }
+
+    private SLightDocument getDocumentContent(long documentId) throws Exception {
+        final ServiceAccessor serviceAccessor = getServiceAccessor();
+        return serviceAccessor.getUserTransactionService().executeInTransaction(
+                () -> serviceAccessor.getDocumentService().getDocument(documentId));
     }
 
     protected List<SAProcessInstance> getAllProcessInstances() throws Exception {
@@ -183,7 +221,9 @@ public class DeleteProcessInstancesIT extends CommonAPILocalIT {
     protected ProcessDefinition createMainProcessDefinition() throws Exception {
         ProcessDefinitionBuilder mainProcessBuilder = new ProcessDefinitionBuilder()
                 .createNewInstance("mainProcess", "1.0");
-        mainProcessBuilder.addContract().addInput("simpleInput1", Type.TEXT, "a simple input");
+        mainProcessBuilder.addContract()
+                .addInput("simpleInput1", Type.TEXT, "a simple input")
+                .addFileInput("myFile", "A file input");
         mainProcessBuilder.addActor("actor");
         mainProcessBuilder.addUserTask("userTask1", "actor").addContract().addInput("simpleInputTask", Type.TEXT,
                 "a simple task input");
@@ -226,7 +266,7 @@ public class DeleteProcessInstancesIT extends CommonAPILocalIT {
                 .addAutomaticTask("autoWithConnector")
                 .addConnector("connector1", "myConnector", "1.0", ConnectorEvent.ON_ENTER)
                 .addAutomaticTask("autoWithData").addShortTextData("activityData", s("activityDataValue")).getProcess())
-                        .done());
+                .done());
     }
 
     protected ProcessDefinition createSubProcessDefinitionWithUserTask(User user) throws Exception {
